--- a/index.html
+++ b/index.html
@@ -86,91 +86,91 @@
 
           <div class="col-lg-4 col-sm-6">
               <div class="image">
-                <img src="images/thumbnail_amelia.png" class="img-responsive" alt="Amelia">
+                <img src="http://yukycohamabe.ciao.jp/Theme/images/thumbnail_amelia.png" class="img-responsive" alt="Amelia">
               </div>
             </div>
 
           <div class="col-lg-4 col-sm-6">
               <div class="image">
-                <img src="images/thumbnail_cerulean.png" class="img-responsive" alt="Cerulean">
+                <img src="http://yukycohamabe.ciao.jp/Theme/images/thumbnail_cerulean.png" class="img-responsive" alt="Cerulean">
               </div>
           </div>
 
           <div class="col-lg-4 col-sm-6">
               <div class="image">
-               <img class="img-responsive" src="images/thumbnail_cosmo.png" alt="Cosmo">
+               <img class="img-responsive" src="http://yukycohamabe.ciao.jp/Theme/images/thumbnail_cosmo.png" alt="Cosmo">
               </div>
             </div>
 
           <div class="col-lg-4 col-sm-6">
               <div class="image">
-               <img class="img-responsive" src="images/thumbnail_cyborg.png" alt="Cyborg">
+               <img class="img-responsive" src="http://yukycohamabe.ciao.jp/Theme/images/thumbnail_cyborg.png" alt="Cyborg">
               </div>
             </div>
 
           <div class="col-lg-4 col-sm-6">
               <div class="image">
-                <img class="img-responsive" src="images/thumbnail_darkly.png" alt="Darkly">
+                <img class="img-responsive" src="http://yukycohamabe.ciao.jp/Theme/images/thumbnail_darkly.png" alt="Darkly">
               </div>
            </div>
 
           <div class="col-lg-4 col-sm-6">
               <div class="image">
-                <img class="img-responsive" src="images/thumbnail_flatly.png" alt="Flatly">
+                <img class="img-responsive" src="http://yukycohamabe.ciao.jp/Theme/images/thumbnail_flatly.png" alt="Flatly">
               </div>
              </div>
 
           <div class="col-lg-4 col-sm-6">
               <div class="image">
-                <img class="img-responsive" src="images/thumbnail_journal.png" alt="Journal">
+                <img class="img-responsive" src="http://yukycohamabe.ciao.jp/Theme/images/thumbnail_journal.png" alt="Journal">
               </div>
            </div>
 
           <div class="col-lg-4 col-sm-6">
               <div class="image">
-               <img src="images/thumbnail_lumen.png" class="img-responsive" alt="Lumen">
+               <img src="http://yukycohamabe.ciao.jp/Theme/images/thumbnail_lumen.png" class="img-responsive" alt="Lumen">
               </div>
             </div>
 
           <div class="col-lg-4 col-sm-6">
               <div class="image">
-               <img class="img-responsive" src="images/thumbnail_readable.png" alt="Readable">
+               <img class="img-responsive" src="http://yukycohamabe.ciao.jp/Theme/images/thumbnail_readable.png" alt="Readable">
               </div>
              </div>
 
           <div class="col-lg-4 col-sm-6">
               <div class="image">
-                <img class="img-responsive" src="images/thumbnail_simplex.png" alt="Simplex">
+                <img class="img-responsive" src="http://yukycohamabe.ciao.jp/Theme/images/thumbnail_simplex.png" alt="Simplex">
               </div>
           </div>
 
           <div class="col-lg-4 col-sm-6">
               <div class="image">
-                <img class="img-responsive" src="images/thumbnail_slate.png" alt="Slate">
+                <img class="img-responsive" src="http://yukycohamabe.ciao.jp/Theme/images/thumbnail_slate.png" alt="Slate">
               </div>
              </div>
              
           <div class="col-lg-4 col-sm-6">
               <div class="image">
-               <img class="img-responsive" src="images/thumbnail_spacelab.png" alt="Spacelab">
+               <img class="img-responsive" src="http://yukycohamabe.ciao.jp/Theme/images/thumbnail_spacelab.png" alt="Spacelab">
               </div>
              </div>
 
           <div class="col-lg-4 col-sm-6">
               <div class="image">
-                <img class="img-responsive" src="images/thumbnail_superhero.png" alt="Superhero">
+                <img class="img-responsive" src="http://yukycohamabe.ciao.jp/Theme/images/thumbnail_superhero.png" alt="Superhero">
               </div>
           </div>
 
           <div class="col-lg-4 col-sm-6">
               <div class="image">
-                <img class="img-responsive" src="images/thumbnail_united.png" alt="United">
+                <img class="img-responsive" src="http://yukycohamabe.ciao.jp/Theme/images/thumbnail_united.png" alt="United">
               </div>
             </div>
 
           <div class="col-lg-4 col-sm-6">
               <div class="image">
-                <img class="img-responsive" src="images/thumbnail_yeti.png" alt="Yeti">
+                <img class="img-responsive" src="http://yukycohamabe.ciao.jp/Theme/images/thumbnail_yeti.png" alt="Yeti">
               </div>
              </div>
 
